avoid wraparound of date #570

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -572,7 +572,7 @@ http://www.cssportal.com/tryit/index.php?file=blog/css-notification-badge */
     -webkit-writing-mode: vertical-lr;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%: );
+    transform: translateY(-50%);
     right: 0;
     background-color: #b47226;
     color: #fff;
@@ -582,6 +582,31 @@ http://www.cssportal.com/tryit/index.php?file=blog/css-notification-badge */
     padding-top: 3px;
     padding-bottom: 3px;
     opacity: 0.7;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
+
+
+
+.moment-date {
+    writing-mode: vertical-lr;
+    -webkit-writing-mode: vertical-lr;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    background-color: #c0392b;
+    color: #fff;
+    font-size: 11px;
+    border-radius: 5px 0px 0px 5px;
+    z-index: 99999;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    opacity: 0.7;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
 }
 
 
